<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
       
    
      <TextView 
        android:id="@+id/contact_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:layout_centerHorizontal="true"
        android:text="@string/contactdata"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="80px"/>
      
    <TextView 
        android:id="@+id/last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_data"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/lastname"/>
    
     <TextView 
        android:id="@+id/first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name"
        android:layout_margin="@dimen/margin_button"
        android:text="@string/firstname"/>
     
      <TextView 
        android:id="@+id/sexe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:layout_below="@id/first_name"
        android:text="@string/sexe"/>
      
       <TextView 
        android:id="@+id/tel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:layout_below="@id/sexe"
        android:text="@string/tel"/>
       
        <TextView 
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:layout_below="@id/tel"
        android:text="@string/email"/>
        
         <TextView 
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:layout_below="@id/email"
        android:text="@string/pass"/>

</RelativeLayout>
