<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cleanandroidtest.MainActivity" >

   <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/img_mbds"
        android:layout_margin="@dimen/margin_button"
        android:src="@drawable/mbds"/>
   
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_mbds"
        android:text="@string/welcome_note" 
        android:textSize="@dimen/welcome_note_size"
        android:textAppearance="@style/AppBaseTheme"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_blue_light"
        android:id="@+id/txt_welcome"/>
    
    <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" 
       android:id="@+id/txt_note"
       android:text="@string/Note"
       android:textColor="@android:color/holo_blue_light"
       android:layout_below="@id/txt_welcome"
       android:layout_marginTop="@dimen/margin_button"/>
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:layout_below="@id/txt_note"
        android:text="@string/btn_1_main"
        android:textColor="@android:color/white"
        android:id="@+id/btn_connect"
        android:background="@android:color/holo_blue_light"/>
        
        
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_button"
        android:layout_below="@id/btn_connect"
        android:text="@string/btn_2_main"
        android:textColor="@android:color/holo_blue_light"
        android:id="@+id/btn_register"
        android:background="@android:color/white"/>

</RelativeLayout>
